@@ -1,0 +1,53 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<!--
+
+#___INFO__MARK_BEGIN__
+##########################################################################
+#
+#  The Contents of this file are made available subject to the terms of
+#  the Sun Industry Standards Source License Version 1.2
+#
+#  Sun Microsystems Inc., March, 2001
+#
+#
+#  Sun Industry Standards Source License Version 1.2
+#  =================================================
+#  The contents of this file are subject to the Sun Industry Standards
+#  Source License Version 1.2 (the "License"); You may not use this file
+#  except in compliance with the License. You may obtain a copy of the
+#  License at http://gridengine.sunsource.net/Gridengine_SISSL_license.html
+#
+#  Software provided under this License is provided on an "AS IS" basis,
+#  WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING,
+#  WITHOUT LIMITATION, WARRANTIES THAT THE SOFTWARE IS FREE OF DEFECTS,
+#  MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE, OR NON-INFRINGING.
+#  See the License for the specific provisions governing your rights and
+#  obligations concerning the Software.
+#
+#  The Initial Developer of the Original Code is: Sun Microsystems, Inc.
+#
+#  Copyright: 2001 by Sun Microsystems, Inc.
+#
+#  All Rights Reserved.
+#
+##########################################################################
+#___INFO__MARK_END__
+
+-->
+<Query tableName="view_job_times" limit="0" type="simple" category="Jobs" name="Wallclock time">
+    <view>
+        <description visible="true"/>
+        <parameter visible="true"/>
+        <sql visible="true"/>
+        <graphic legendVisible="true" order="0">
+            <pie>
+                <xaxis>name</xaxis>
+                <yaxis>sum_wallclock_time</yaxis>
+            </pie>
+        </graphic>
+    </view>
+    <field function="SUM" dbName="wallclock_time" reportName="sum_wallclock_time"/>
+    <field function="VALUE" dbName="name" reportName="name"/>
+    <sql>SELECT SUM(wallclock_time) AS "sum_wallclock_time",name FROM view_job_times GROUP BY name</sql>
+</Query>
+
